--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-/*Author    : Wafa Rifqi Anafin*/
-/*Github    : https://github.com/wafarifki*/
-/*Facebook  : https://facebook.com/wafarifkianafin*/
-/*Instagram : https://instagram.com/wafarifki_*/
-/*Website   : https://wafarifki.tk*/
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 body,
@@ -78,7 +72,20 @@ html {
 }
 
 section .gambar {
-  border-radius: 10px;
+  flex: 1 1 45rem;
+}
+
+section .gambar2{
+  width: 50%;
+}
+
+section .gambar3{
+  width: 50%;
+}
+
+section .gambar img {
+  flex: 1 1 45rem;
+  padding: 0 1rem;
 }
 
 section .ucapan {
